--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
         "vite": "^5.0.0"
     },
     "dependencies": {
-        "alpinejs": "^3.13.5"
+        "@popperjs/core": "^2.11.8",
+        "alpinejs": "^3.13.5",
+        "bootstrap": "^5.3.3"
     }
 }
